--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>
+        <h1 role="heading" aria-level="1">Welcome to My Accessible Portfolio</h1>
+    </header>
+
+    <nav role="navigation" aria-label="Main Navigation">
+        <ul role="list">
+            <li role="listitem"><a href="#about">About Me</a></li>
+            <li role="listitem"><a href="#projects">Projects</a></li>
+            <li role="listitem"><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section id="about">
+            <img role="img" src="profile.jpg" alt="A professional portrait of me" />
+            <p>Hi! I'm an enthusiastic web developer focused on creating accessible and user-friendly web applications. Welcome to my portfolio!</p>
+        </section>
+
+        <section id="projects">
+            <h2 role="heading" aria-level="2">Projects</h2>
+            <ul role="list">
+                <li role="listitem">Project A - A responsive e-commerce website</li>
+                <li role="listitem">Project B - A mobile-first fitness app</li>
+                <li role="listitem">Project C - An AI-powered chatbot</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 My Accessible Portfolio</p>
+    </footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
